--- a/templates/my_games.html
+++ b/templates/my_games.html
@@ -11,6 +11,9 @@
     <div class="credits-display">
       <span class="credits-icon">🪙</span>
       <span class="credits-text">Balance: <strong>{{ user_credits }}</strong> Credits</span>
+      <a href="{{ url_for('payment') }}" class="btn btn-cta" style="margin-left: 1rem; font-size: 0.8rem; padding: 0.5rem 1rem;">
+        <span>💳 TOP UP</span>
+      </a>
     </div>
   </section>
 
