--- a/templates/create_game.html
+++ b/templates/create_game.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Create Game - AI Game Studio{% endblock %}
+{% block title %}Create Game - GlitchPeachAI{% endblock %}
 
 {% block content %}
 <main>
