--- a/templates/edit_game.html
+++ b/templates/edit_game.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Edit Game - AI Game Studio{% endblock %}
+{% block title %}Edit Game - GlitchPeachAI{% endblock %}
 
 {% block content %}
 <main>
