--- a/templates/games.html
+++ b/templates/games.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Games - AI Game Studio{% endblock %}
+{% block title %}GlitchPeachAI - Games{% endblock %}
 
 {% block content %}
 <main>
