--- a/templates/play_game.html
+++ b/templates/play_game.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}{{ game.title }} - AI Game Studio{% endblock %}
+{% block title %}{{ game.title }} - GlitchPeachAI{% endblock %}
 
 {% block content %}
 <main>
