--- a/templates/play_uploaded_game.html
+++ b/templates/play_uploaded_game.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}{{ game.filename[:-5].replace('_', ' ').title() or 'Uploaded Game' }} - AI Game Studio{% endblock %}
+{% block title %}{{ game.filename[:-5].replace('_', ' ').title() or 'Uploaded Game' }} - GlitchPeachAI{% endblock %}
 
 {% block content %}
 <main>
